# STM32L4xx

./: .gitmodules  CMakeLists.txt  README.md
inc/: assert_stm32l4xx.h  spinlock_stm32l4xx.h  stm32l4xx.h  system_stm32l4xx.h
src/: startup_stm32l4xx.c  syscalls.c  system_stm32l4xx.c
